@@ -23,26 +23,3 @@ libbicpl_la_LIBADD = \
 	$(BIC_LIBS) $(imageio_LIBS)
 
 
-# The following is taken from the libtool documentation.
-
-#   Here are a set of rules to help you update your library version
-#information:
-#
-#  1. Start with version information of `0:0:0' for each libtool library.
-#
-#  2. Update the version information only immediately before a public
-#     release of your software.  More frequent updates are unnecessary,
-#     and only guarantee that the current interface number gets larger
-#     faster.
-#
-#  3. If the library source code has changed at all since the last
-#     update, then increment REVISION (`C:R:A' becomes `C:r+1:A').
-#
-#  4. If any interfaces have been added, removed, or changed since the
-#     last update, increment CURRENT, and set REVISION to 0.
-#
-#  5. If any interfaces have been added since the last public release,
-#     then increment AGE.
-#
-#  6. If any interfaces have been removed since the last public release,
-#     then set AGE to 0.
