@@ -1,0 +1,47 @@
+This recipe was adapted from libtool's release procedure.
+
+We are using libtool to (possibly) generate a shared library.
+The library has a three-component version string, written
+
+	CURRENT[:REVISION[:AGE]]
+
+The version started at 0:0:0.
+
+
+
+
+================================================================
+= Release procedure
+================================================================
+
+* Update NEWS.
+
+* Update the -version-info argument in Makefile.am according to the
+  following rules:
+
+  1. If the library source code has changed at all since the last
+     update, then increment REVISION (`C:R:A' becomes `C:r+1:A').
+
+  2. If any interfaces have been added, removed, or changed since the
+     last update, increment CURRENT, and set REVISION to 0.
+
+  3. If any interfaces have been added since the last public release,
+     then increment AGE.
+
+  4. If any interfaces have been removed since the last public release,
+     then set AGE to 0.
+
+* Configure, build, and install.
+
+* Commit.
+
+* Run "make distcheck".
+
+* Copy tar file to distribution site.
+
+* Run "cvs tag release-x_y_z"
+
+* Update version number in configure.in.
+
+* Commit.
+
